--- a/views/ad_view.html
+++ b/views/ad_view.html
@@ -72,7 +72,7 @@
 {{#if pic}}
         <div class="col-xs-6 col-md-6">
             <a href="#" class="thumbnail">
-                <img src="/user_data/{{pic}}">
+                <img src="/user_data/{{pic.small}}">
                 </a>
             </div>
 {{/if}}
