--- a/views/ad.html
+++ b/views/ad.html
@@ -66,7 +66,7 @@
             {{#if pic}}
             <div class="col-xs-6 col-md-6">
                 <a href="#" class="thumbnail">
-                    <img id="pic{{_id}}" src="/user_data/{{pic}}">
+                    <img id="pic{{_id}}" src="/user_data/{{pic.small}}">
                 </a>
             </div>
             {{/if}}
