--- a/views/user.html
+++ b/views/user.html
@@ -44,11 +44,10 @@
                 <div class="modal-body">
                     <form id="add-form" class="form-horizontal" role="form">
                         <div class="form-group">
-                            <label class="col-sm-2 control-label">名称</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control hide" id="_id">
-                                <input type="text" class="form-control" id="roleName" placeholder="请输入名称">
-                            </div>
+                            <label class="col-sm-2 control-label">选择</label>
+                            <select id="value" multiple class="form-control" style="height: 120px">
+
+                            </select>
                         </div>
                     </form>
                 </div>
