修改同步菜单

--- a/views/role.html
+++ b/views/role.html
@@ -59,7 +59,7 @@
                                     <option value="/fair">展会管理</option>
                                     <option value="/adview">广告管理</option>
                                     <option value="/personal">个人中心</option>
-                                    <option value="/sync">同步</option>
+                                    <option value="/sync">审核及同步</option>
                                     <option value="/role">角色管理</option>
                                     <option value="/user">用户管理</option>
                                 </select>
